    - the frame itself is created (without any of its regions or children)
    - the special regions are created (e.g., slider thumb texture, button texture, etc.)
    - the regions are created, in order of declaration in the XML file
    - the special frames are created (e.g., scroll child)
    - the children frames are created, in order of declaration in the XML file
 - gui: inherited scripts will be preserved and executed before the scripts defined in the frames
 - gui: focus is now handled as a stack rather than binary
 - lua: removed custom lua wrapper, using sol2 instead
 - xml: removed custom xml parser, using pugixml instead
 - yaml: added yaml parser for GUI layout

Other changes:
 - general: various fixes and improvements to the build system
 - general: fixed various warnings and minor bugs detected by clang
 - general: moved away from using reference-counted smart pointers whenever possible
 - general: moved all code into the lxgui namespace
 - general: exceptions now inherit from std::exception
 - general: moved all enums to C++11 enum class
 - general: added C++11 noexcept specifiers where appropriate
 - general: removed foreach() macro in favor of C++11 range-based for loop
 - general: use override instead of virtual whenever applicable
 - general: made all single argument constructors explicit where appropriate
 - general: removed lua::var (custom std::any) and added utils::variant (using std::variant)
 - general: renamed "sensibility" to "sensitivity"
 - general: renamed "overed" to "hovered"
 - general: now using non-static data member initialisers whenever possible
 - utils: removed broken custom code for UTF8-UTF32 conversion and use a library instead
 - lua: added support for Lua versions later than 5.1
 - lua: removed unusual constructs to serialize a table
 - input: simplified class hierarchy by merging handler+handler_impl into input::source
 - input: vastly improved performance of SFML input implementation