@@ -26,8 +26,10 @@ Major changes:
     - the regions are created, in order of declaration in the XML file
     - the special frames are created (e.g., scroll child)
     - the children frames are created, in order of declaration in the XML file
+ - gui: scripts are now handled with signals and slots, for better control of lifetime
  - gui: inherited scripts will be preserved and executed before the scripts defined in the frames
  - gui: focus is now handled as a stack rather than binary
+ - gui: keyboard input is now given to topmost frame registered for the pressed key
  - lua: removed custom lua wrapper, using sol2 instead
  - xml: removed custom xml parser, using pugixml instead
  - yaml: added yaml parser for GUI layout
@@ -119,6 +121,7 @@ Other changes:
  - gui: removed frame::is_in_frame; use is_in_region instead
  - gui: removed frame::register_all_events and unregister_all_events
  - gui: removed frame::enable_keyboard, use enable_key_capture instead
+ - gui: removed event class; generic events are now only using event_data
  - gui: edit_box::set_text_insets now takes a single bounds2f argument
  - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
  - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
